--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="PitBull RoCa">
     <meta property="og:description" content="Repetimos el proceso desde cero pa'darle gusto al profe.">
     <meta property="og:url" content="http://localhost:2368/">
-    <meta property="og:image" content="http://localhost:2368/content/images/2016/04/pitbull-2.jpg">
+    <meta property="og:image" content="/content/images/2016/04/pitbull.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PitBull RoCa">
     <meta name="twitter:description" content="Repetimos el proceso desde cero pa'darle gusto al profe.">
